Fixed overflow on assignment grading table.

--- a/style/modules.css
+++ b/style/modules.css
@@ -134,6 +134,10 @@
 
 /** Assignments **/
 /* Attempts table */
+.usersubmissions {
+    overflow: auto;
+}
+
 #attempts tr {
     border-top: 1px solid #E6E6E6;
     border-bottom: 1px solid #E6E6E6;
